--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <title>ok</title>
 </head>
 <body>
-    yo cool ? ig
-    <a href="a.html"></a>
+<nav>
+    <div class="logo"><img src="medias/logo.png" alt="logo"></div>
+    
+    <a href="#" class="projet">Projets</a><a href="#" class="contact">Contact</a>
+</nav>
+<div class="main">
+    <p class="jasmine">jasmine</p>
+    <div class="rectangle un"></div>
+    <div class="rectangle deux"></div>
+    <div class="rectangle trois"></div>
+    <p class="explication">
+        Salut! Je suis une étudiante en
+        intégration multimédia et j’ai
+        aucun projet à présenter!
+</p></div>
+
 </body>
 </html>
