--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <nav>
-    <div class="logo"><img src="medias/logo.png" alt="logo"></div>
+    <div class="logo"><a href="index.html"><img src="medias/logo.png" alt="logo"></a></div>
     
-    <a href="#" class="projet">Projets</a><a href="#" class="contact">Contact</a>
+    <a href="pages/projets.html" class="projet">Projets</a><a href="#" class="contact">Contact</a>
 </nav>
 <div class="main">
-    <p class="jasmine">jasmine</p>
+    <p class="titre">jasmine</p>
     <div class="rectangle un"></div>
     <div class="rectangle deux"></div>
     <div class="rectangle trois"></div>
@@ -22,7 +22,10 @@
         Salut! Je suis une étudiante en
         intégration multimédia et j’ai
         aucun projet à présenter!
-</p></div>
+</p>
+<div class="rond">Mes <br> Projets!</div>
+<div class="lignes"></div>
+</div>
 
 </body>
 </html>
