jai oublie le fond
mais jai deja ouvert github alors  goobye

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         intégration multimédia et j’ai
         aucun projet à présenter!
 </p>
-<div class="rond">Mes <br> Projets!</div>
+<a href="pages/projets.html" class="lien"><div class="rond">Mes <br> Projets!</div></a>
 <div class="lignes"></div>
 </div>
 
